safari vertical align placeholder fix

--- a/main.scss
+++ b/main.scss
@@ -850,6 +850,7 @@ body {
               border-radius: 6px;
               text-align: center;
               font-size: 26px;
+              line-height: 48px;
               color: #333333;
               transition: $duration;
 
